--- a/Devslopes Social/Base.lproj/Main.storyboard
+++ b/Devslopes Social/Base.lproj/Main.storyboard
@@ -102,6 +102,9 @@
                                         <state key="normal" title="Sign In">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="signInBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6an-j3-HwJ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
